k8s-configs/ping-cloud/base/pingcentral/server/cloud-generic/deployment.yaml
# This defines the Ping Central deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingcentral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingcentral
  strategy:
    type: Recreate
  template:
    metadata:
      name: pingcentral
      annotations:
        lastUpdateReason: "NA"
      labels:
        role: pingcentral
        entitled-app: "true"
        pod-reaper: enabled
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each DA pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingcentral
                topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: pingcentral
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
          privileged: false
        image: public.ecr.aws/r2h3l6e4/pingcloud-apps/pingcentral/dev:v2.4-release-branch-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "5Gi"
            cpu: "2"
        readinessProbe:
          exec:
            command: [/opt/readiness.sh]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [/opt/liveness.sh]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        ports:
          - name: https
            containerPort: 9022
        volumeMounts:
          - name: pingcentral-init 
            mountPath: /opt/staging/hooks/logger.lib.sh
            subPath: logger.lib.sh
          - name: ssh-dir
            mountPath: /home/ping/.ssh
          - name: shared-dir
            mountPath: /opt/shared-dir
          - name: data-dir
            mountPath: /usr/local/bin/kubectl
            subPath: kubectl
          - name: data-dir
            mountPath: /opt/staging/ds_env_vars
            subPath: ds_env_vars
          - name: pingcentral-passwords
            mountPath: /usr/local/secrets
            readOnly: true
          - name: pingcentral-license
            mountPath: /opt/in/instance/conf/pingcentral.lic
            subPath: pingcentral.lic
          - name: data-dir
            mountPath: /opt/staging/newrelic.jar
            subPath: newrelic.jar
          - name: license-dir
            mountPath: /opt/license
          - name: aws-config-dir
            mountPath: /home/ping/.aws
            subPath: pingcentral-creds
      securityContext:
        fsGroup: 9999
        runAsNonRoot: true
      volumes:
        - name: ssh-dir
          emptyDir: {}
        - name: shared-dir
          emptyDir: {}
        - name: data-dir
          emptyDir: {}
        - name: license-dir
          emptyDir: {}
        - name: aws-config-dir
          emptyDir: {}
        - name: pingcentral-init
          configMap:
            name: pingcommon-init
            defaultMode: 0555
        - name: ssh-id-key-secret
          secret:
            secretName: ssh-id-key-secret
            optional: true
            defaultMode: 0400
        - name: known-hosts-config
          configMap:
            name: known-hosts-config
            optional: true
            defaultMode: 0644
        - name: pingcentral-license
          secret:
            secretName: pingcentral-license
            optional: true
            defaultMode: 0400
        - name: pingcentral-passwords
          secret:
            secretName: pingcentral-passwords
            optional: true
            defaultMode: 0400
