k8s-configs/ping-cloud/base/pingcentral/server/cloud-generic/statefulset.yaml
# This defines the Ping Central deployment

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingcentral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingcentral
  serviceName: pingcentral
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingcentral
      annotations:
        lastUpdateReason: "NA"
      labels:
        role: pingcentral
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each DA pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingcentral
                topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: pingcentral
        # Required because new GSA images run as non-root by default, and P1AS does not work with non-root user yet.
        securityContext:
          runAsNonRoot: false
          runAsUser: 0
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-apps/pingcentral:1.8.0-v1.0.5-pdo-2713-detect-first-deploy
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "5Gi"
            cpu: "2"
        readinessProbe:
          exec:
            command: [/opt/readiness.sh]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [/opt/liveness.sh]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        ports:
          - name: https
            containerPort: 9022
        volumeMounts:
          # FIXME: fix home directory when containers run as non-root user
          - name: ssh-dir
            mountPath: /root/.ssh
          - name: topology-descriptor
            mountPath: /opt/staging/topology/descriptor.json
            subPath: descriptor.json
          - name: data-dir
            mountPath: /usr/local/bin/kubectl
            subPath: kubectl
          - name: data-dir
            mountPath: /opt/staging/ds_env_vars
            subPath: ds_env_vars
          - name: data-dir
            mountPath: /usr/local/bin/skbn
            subPath: skbn
          - name: pingcentral-passwords
            mountPath: /usr/local/secrets
            readOnly: true
          - name: pingcentral-license
            mountPath: /opt/in/instance/conf/pingcentral.lic
            subPath: pingcentral.lic
          - name: out-dir
            mountPath: /opt/out
      volumes:
        - name: ssh-dir
          emptyDir: {}
        - name: data-dir
          emptyDir: {}
        - name: pingcentral-init
          configMap:
            name: pingcommon-init
            defaultMode: 0555
        - name: topology-descriptor
          configMap:
            name: topology-descriptor
            optional: true
            defaultMode: 0644
        - name: ssh-id-key-secret
          secret:
            secretName: ssh-id-key-secret
            optional: true
            defaultMode: 0400
        - name: known-hosts-config
          configMap:
            name: known-hosts-config
            optional: true
            defaultMode: 0644
        - name: pingcentral-license
          secret:
            secretName: pingcentral-license
            optional: true
            defaultMode: 0400
        - name: pingcentral-passwords
          secret:
            secretName: pingcentral-passwords
            optional: true
            defaultMode: 0400
        - name: out-dir
          persistentVolumeClaim:
            claimName: out-dir
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingcentral-gp2
      resources:
        requests:
          storage: "10G"
