k8s-configs/ping-cloud/base/pingcentral/server/cloud-generic/ingress.yaml
# This defines the ingress for the Ping Delegated Admin service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingcentral-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - pingcentral.ping-demo.com
  rules:
  - host: pingcentral.ping-demo.com
    http:
      paths:
      # This rule gives external access to the pingcentral service
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pingcentral
            port:
              number: 9022
